@@ -1,3 +1,8 @@
+2004-03-10  Dominique Devriese  <devriese@kde.org>
+
+	* Don't mess up the order of given objects in a macro
+	construction.
+
 2004-03-09  Dominique Devriese  <devriese@kde.org>
 
 	* Fix the macro system to reject macro's where not all of the
